--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html ng-app="tribeFrontend">
   <head>
     <meta charset="utf-8">
-    <title>tribeFrontend</title>
+    <title>Tribe</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -20,17 +20,20 @@
     <!-- endbuild -->
   </head>
   <body>
-    <!--[if lt IE 10]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
 
-    <div ui-view></div>
+    <div class="app-container" ui-view></div>
+    <div id="app-loader" tribe-loader></div>
+
+    <script type="text/javascript">
+        window.CKEDITOR_BASEPATH = '/bower_components/ckeditor/';
+    </script>
 
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
     <!-- run `gulp inject` to automatically populate bower script dependencies -->
     <!-- endbower -->
     <!-- endbuild -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD648PdU6_MBeScuwvsl18nXmsEIxAJ0Vc&sensor=false"></script>
     <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
     <!-- inject:js -->
     <!-- js files will be automatically insert here -->
